Get web scraping working

--- a/config/application.yml
+++ b/config/application.yml
@@ -9,3 +9,4 @@
 GUIDESTAR_USER: "dannyyu92@gmail.com"
 GUIDESTAR_PW: "saasbook"
 ALCHEMY_KEY: "5c314204bc868beb7516d5a02d3f1c149d364dae"
+JUSTGIVING_KEY: "f4530b29"
